bk_ida/gccida/g0/fixup_stack_1
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_stack_1/src/function.c:3131:26: error: use of undeclared identifier 'machine_mode'
if ( memory_address_p( ( machine_mode)*( ( unsigned __int8 *)x + 2), ad) ) 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_stack_1/src/function.c:3163:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)x->fld[i]; 
                      ^~~~~~~~~
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/fixup_stack_1/src/obj/function.o] Error 1
